--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>Yash | Creative Developer</title>
+    <title>MJDTALKER |A professional MC, event host & entertainer.</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="description" content="Portfolio of Yash Chauhan - Creative developer living in India - Focused on React native and ReactJS">
-    <meta name="keywords" content="webgl, threejs, portfolio, reactjs, react, frontend developer, front-end, programming, web developer, web, developer, 3d website, 3d, blender, India, Portfolio of Yash Chauhan - Creative developer living in India - Focused on React native and ReactJS">
-    <meta property="og:site_name" content="Yash Chauhan Portfolio">
-    <meta property="og:title" content="Yash Chauhan - Creative Developer">
-    <meta property="og:description" content="Portfolio of Yash Chauhan - Creative developer living in India - Focused on React native and ReactJS">
+    <meta name="description" content="Creating unforgettable moments with energy, elegance, and seamless delivery.">
+    <meta name="keywords" content="Creating unforgettable moments with energy, elegance, and seamless delivery.">
+    <meta property="og:site_name" content="MJDTALKER">
+    <meta property="og:title" content="MJDTALKER |A professional MC, event host & entertainer.">
+    <meta property="og:description" content="MJDTALKER |A professional MC, event host & entertainer.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://david-hckh.com/">
     <meta property="og:image" content="https://david-hckh.com/thumbnail.png">
