--- a/index.html
+++ b/index.html
@@ -315,11 +315,11 @@
                         <!--Header Content-->
                         <g transform="translate(170 118)" fill="#34bfff" font-weight="bold">
                             <text x="0" y="0" font-size="12" class="about-header-upper-text">Name :</text>
-                            <text x="0" y="20" font-size="18" class="about-header-lower-text">Yash</text>
-                            <text x="110" y="0" font-size="12" class="about-header-upper-text">Age :</text>
-                            <text x="110" y="20" font-size="18" class="about-header-lower-text">20</text>
+                            <text x="0" y="20" font-size="18" class="about-header-lower-text">MJDTALKER</text>
+                            <text x="110" y="0" font-size="12" class="about-header-upper-text">Occupation :</text>
+                            <text x="110" y="20" font-size="18" class="about-header-lower-text">MC/Entertainer</text>
                             <text x="200" y="0" font-size="12" class="about-header-upper-text">From :</text>
-                            <text x="200" y="20" font-size="18" class="about-header-lower-text">India</text>
+                            <text x="200" y="20" font-size="18" class="about-header-lower-text">Nigeria</text>
                         </g>
                     </g>
 
