--- a/index.html
+++ b/index.html
@@ -316,10 +316,10 @@
                         <g transform="translate(170 118)" fill="#34bfff" font-weight="bold">
                             <text x="0" y="0" font-size="12" class="about-header-upper-text">Name :</text>
                             <text x="0" y="20" font-size="18" class="about-header-lower-text">MJDTALKER</text>
-                            <text x="110" y="0" font-size="12" class="about-header-upper-text">Occupation :</text>
-                            <text x="110" y="20" font-size="18" class="about-header-lower-text">MC/Entertainer</text>
-                            <text x="200" y="0" font-size="12" class="about-header-upper-text">From :</text>
-                            <text x="200" y="20" font-size="18" class="about-header-lower-text">Nigeria</text>
+                            <text x="110" y="0" font-size="12" class="about-header-upper-text">Job:</text>
+                            <text x="110" y="20" font-size="18" class="about-header-lower-text">MC</text>
+                            <text x="200" y="0" font-size="12" class="about-header-upper-text">From:</text>
+                            <text x="200" y="20" font-size="18" class="about-header-lower-text">Naija</text>
                         </g>
                     </g>
 
