--- a/index.html
+++ b/index.html
@@ -399,8 +399,14 @@
                                 href="/icons/baby-pixel.png" x="6" y="7" />
 
                             <!--First Text-->
-                            <text x="88" y="33" class="about-text">I'm Creative Director and UI/UX Designer from morbi</text>
-                                 <text x="88" y="50" class="about-text">gujrat, working in web development and web designing.</text>
+<text x="88" y="33" class="about-text">I'm a Professional Event Host, Compere & Voiceover Artist</text>
+<text x="88" y="50" class="about-text">from Akwa Ibom, bringing unforgettable energy to events.</text>
+<text x="88" y="67" class="about-text">Based in Bayelsa, I've been crafting joyful moments since 2015,</text>
+<text x="88" y="84" class="about-text">starting as a stand-up comedian and evolving into a full-time</text>
+<text x="88" y="101" class="about-text">entertainer. With a degree in English and Communication Studies,</text>
+<text x="88" y="118" class="about-text">I combine education, charisma, and performance to create smooth,</text>
+<text x="88" y="135" class="about-text">engaging experiences. For me, it's not just work—it's about</text>
+<text x="88" y="152" class="about-text">connecting with people and continuously growing in my craft.</text>
                                  
                         </g>
 
