--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                             <!--First Text-->
 <text x="88" y="33" class="about-text">I'm a Professional Event Host, Compere & Voiceover Artist</text>
 <text x="88" y="50" class="about-text">from Akwa Ibom, bringing unforgettable energy to events.</text>
-<text x="88" y="67" class="about-text">Based in Bayelsa, I've been crafting joyful moments since 2015.</text>
+<text x="88" y="67" class="about-text"> crafting joyful moments since 2015.</text>
                                  
                         </g>
 
@@ -417,7 +417,7 @@
 
                             <!--Second Text-->
 <text x="5" y="33" class="about-text">For me, entertainment is about crafting joyful moments and</text>
-<text x="5" y="50" class="about-text">connecting with people while continuously growing in my craft.</text>
+<text x="5" y="50" class="about-text">connecting with people while continuously growing my art.</text>
                             <!-- <text x="55" y="70" class="about-text"> platform and more...</text> -->
                         </g>
 
@@ -437,7 +437,7 @@
                                 href="/icons/rocket-pixel.png" x="6" y="7" />
 
                             <!--Third Text-->
-<text x="10" y="33" class="about-text">A graduate of English and Communication Studies, I combine</text>
+<text x="10" y="33" class="about-text">I combine</text>
 <text x="10" y="50" class="about-text">education, charisma, and performance to create memorable experiences.</text>
                         </g>
                     </g>
