--- a/index.html
+++ b/index.html
@@ -437,8 +437,8 @@
                                 href="/icons/rocket-pixel.png" x="6" y="7" />
 
                             <!--Third Text-->
-<text x="10" y="33" class="about-text">I combine</text>
-<text x="10" y="50" class="about-text">education, charisma, and performance to create memorable experiences.</text>
+                            <text x="88" y="33" class="about-text">A graduate of English and Communication Studies, I combine</text>
+                            <text x="88" y="50" class="about-text">education, charisma, and performance to create memorable experiences.</text>
                         </g>
                     </g>
 
