--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="David Heckhoff Portfolio">
     <meta name="apple-mobile-web-app-status-bar-style" content="translucent">
-    <link rel="mask-icon" href="/head/logo.svg" color="#091434">
+    <link rel="mask-icon" href="/head/WhatsApp_Image_2025-11-26_at_10.39.14_AM-removebg-preview.png" color="#091434">
     <link rel="icon" type="image/png" href="/head/favion-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/head/favion-16x16.png" sizes="16x16">
     <link rel="apple-touch-icon" sizes="120x120" href="/head/apple-120.png">
