--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <meta name="apple-mobile-web-app-title" content="David Heckhoff Portfolio">
     <meta name="apple-mobile-web-app-status-bar-style" content="translucent">
     <link rel="mask-icon" href="/head/WhatsApp_Image_2025-11-26_at_10.39.14_AM-removebg-preview.png" color="#091434">
-    <link rel="icon" type="image/png" href="/head/favion-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/head/favion-16x16.png" sizes="16x16">
-    <link rel="apple-touch-icon" sizes="120x120" href="/head/apple-120.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/head/apple-152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/head/apple-180.png">
-    <link rel="apple-touch-icon" sizes="192x192" href="/head/apple-192.png">
+    <link rel="icon" type="image/png" href="/head/WhatsApp_Image_2025-11-26_at_10.39.14_AM-removebg-preview.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/head/WhatsApp_Image_2025-11-26_at_10.39.14_AM-removebg-preview.png" sizes="16x16">
+    <link rel="apple-touch-icon" sizes="120x120" href="/head/WhatsApp_Image_2025-11-26_at_10.39.14_AM-removebg-preview.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/head/WhatsApp_Image_2025-11-26_at_10.39.14_AM-removebg-preview.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/head/WhatsApp_Image_2025-11-26_at_10.39.14_AM-removebg-preview.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="/head/WhatsApp_Image_2025-11-26_at_10.39.14_AM-removebg-preview.png">
     <meta name="msapplication-config" content="/head/browserconfig.xml">
     <meta name="msapplication-TileColor" content="#FF923E">
     <meta name="msapplication-square70x70logo" content="/head/mstile-70.png">
